[idea] #0000 Fixed findbugs warnings in current master
closes #352